--- a/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
+++ b/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: ollama-telesecret
 stringData:
     TOKEN: ENC[AES256_GCM,data:q5V3Pt6qV7ZCkhwjnwClxiqqJB8PikFxQ1CzIX5iA2E3AOwGl7e6/WJVZ5l/,iv:LC9HB5Ai+WTCEzM2C87QOFjAEuhoBXukL/lY1Tkye5c=,tag:xovvZhVveuXVKunr2yn9mg==,type:str]
-    ADMIN_ID: ENC[AES256_GCM,data:vFJVt3jslfwH,iv:WDsyRd8pifC821/IR/eUnKj2qus8KE8mkHgp2RH5nc0=,tag:H5GMuoyGDOVIyk9y3JC1Aw==,type:str]
-    USER_IDS: ENC[AES256_GCM,data:/YBDs0PeKKqu,iv:8NnrVtmUwN8C3AXfxsPXjWVKMIIz7pQ+bXa8fv3fzQA=,tag:Afa42jlVS7KRxuxhO6CuOQ==,type:str]
+    ADMIN_IDS: ENC[AES256_GCM,data:Sal8O/wRmEoPxpd+,iv:o6a/DfBOGGmKzEJQNFQdZhjkqgaqE4+/G4ek8thcse8=,tag:9glg+fyE4rvgEpZoxzhopA==,type:str]
+    USER_IDS: ENC[AES256_GCM,data:XeH5YBe6CDx5MTfl,iv:fh5Yq25zMVLOw+wlWfyKlIuzyBn8ziUuGpQ+WMy2kMc=,tag:p/HfTCpe8JhNDPjO6jJcuA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             YjY2N0p3TnZURmRLNEEwNURsVnRKYVEKQknJjY0GRL+5QONT6yHFPpbSwD0B3ivx
             i2xaNPT2ik0T2FJ+/BfzyTtOHYV3aOeCwOymS1SzZn9A/SwKoa4JgA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-07T22:22:34Z"
-    mac: ENC[AES256_GCM,data:MfV4KSrpTf6uC9s6AYtlJtbulaMcEWuqQvwS/2Qwjiyj4Rdx2ObdG5hDQg7TLhG23Itc2wM56OFRbCg9aWrfB2+R6/ej6beFu7mtJQyluOeSrNzmSQiUYUxvbklCNUdtt9C910YoB36B7UqgxicRmF0WW/CUfEX60Ix/yBCAKxo=,iv:pHAXNtHGAtKODDbjGsu4M5w6NHfQk0wUTQ0hNC2D8ZA=,tag:hYIP6W85TEK6sdrVkPuheg==,type:str]
+    lastmodified: "2024-06-07T22:28:53Z"
+    mac: ENC[AES256_GCM,data:D1aH6PsUHgoyskxPVJvkmwV+2faz5FM9PECHdkmOxAt/7wcpJcd25NC+Ypa0mJgmqU8z2TZHSEsx//Ne8fv99oZRWVFSWp2/CL3KpgTRROOy5HwCHjb0ZI8blrO45YZuc2CEOj1HWngi/AXzgSe75iWJYCFsVoTB84hMVFqD21I=,iv:EBdzA7vzBSaAPrN1Lcm0JR/WO8Di8jsoPlHKGISxByA=,tag:/arShQxwZdyaGAxYEZL6Ng==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
