--- a/kubernetes/apps/ai/ollama/addons/helmrelease-telegram.yaml
+++ b/kubernetes/apps/ai/ollama/addons/helmrelease-telegram.yaml
@@ -40,7 +40,7 @@ spec:
               TIMEOUT: 20
             envFrom:
             - secretRef:
-                name: my-secret
+                name: ollama-telesecret
             securityContext:
               allowPrivilegeEscalation: false
               capabilities: { drop: ["ALL"] }
