--- a/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
+++ b/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: ollama-telesecret
 stringData:
     TOKEN: ENC[AES256_GCM,data:q5V3Pt6qV7ZCkhwjnwClxiqqJB8PikFxQ1CzIX5iA2E3AOwGl7e6/WJVZ5l/,iv:LC9HB5Ai+WTCEzM2C87QOFjAEuhoBXukL/lY1Tkye5c=,tag:xovvZhVveuXVKunr2yn9mg==,type:str]
-    ADMIN_IDS: ENC[AES256_GCM,data:Sal8O/wRmEoPxpd+,iv:o6a/DfBOGGmKzEJQNFQdZhjkqgaqE4+/G4ek8thcse8=,tag:9glg+fyE4rvgEpZoxzhopA==,type:str]
-    USER_IDS: ENC[AES256_GCM,data:XeH5YBe6CDx5MTfl,iv:fh5Yq25zMVLOw+wlWfyKlIuzyBn8ziUuGpQ+WMy2kMc=,tag:p/HfTCpe8JhNDPjO6jJcuA==,type:str]
+    ADMIN_IDS: ENC[AES256_GCM,data:5QamakLLvRvo,iv:Yx1zbpKAyh0b5QVYp4vTqNa7sCYWGL72K5bod8bCTG4=,tag:FcC9QGHVPpJIB6DzOwHIKA==,type:str]
+    USER_IDS: ENC[AES256_GCM,data:iWIM0MBKhGl0,iv:ckep+cxzBN7vV9yzaoX6/+4KQ79u/pwNSVQpJg3jWf4=,tag:ATqhXyof9aFepxMqRQCJMw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             YjY2N0p3TnZURmRLNEEwNURsVnRKYVEKQknJjY0GRL+5QONT6yHFPpbSwD0B3ivx
             i2xaNPT2ik0T2FJ+/BfzyTtOHYV3aOeCwOymS1SzZn9A/SwKoa4JgA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-07T22:28:53Z"
-    mac: ENC[AES256_GCM,data:D1aH6PsUHgoyskxPVJvkmwV+2faz5FM9PECHdkmOxAt/7wcpJcd25NC+Ypa0mJgmqU8z2TZHSEsx//Ne8fv99oZRWVFSWp2/CL3KpgTRROOy5HwCHjb0ZI8blrO45YZuc2CEOj1HWngi/AXzgSe75iWJYCFsVoTB84hMVFqD21I=,iv:EBdzA7vzBSaAPrN1Lcm0JR/WO8Di8jsoPlHKGISxByA=,tag:/arShQxwZdyaGAxYEZL6Ng==,type:str]
+    lastmodified: "2024-06-07T22:37:53Z"
+    mac: ENC[AES256_GCM,data:ooDjTHQmP6s3pE+Tn851L/OSSTL7posIeBe1+l01i5SM4Qe1k+jsq54czqg4ufsLmBxl1eM8gtATWl4hYGOa962sqtuLWX9jHohPk8we2cnjsvr+Os0JWqHOKDPlGlDpJ/HCPulEOJ+CkiGUE846nhBXRl32nYEPLoBOhBRagB8=,iv:URzXOxAbr0T8zkd+/+YQg1HU0Hhicz0dhm3IH2fA06o=,tag:9W3M1h9lU7XRHdMMbPLENQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
