--- a/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
+++ b/kubernetes/apps/ai/ollama/addons/secret.sops.yaml
@@ -3,6 +3,9 @@ kind: Secret
 metadata:
     name: ollama-telesecret
 stringData:
+    OLLAMA_BASE_URL: ENC[AES256_GCM,data:61bWQt8ZxuHNlmxmubK0QrHcCdI=,iv:dhU/QfaxUhQ/tL1bjtJKK2kvzlyuZjeeqd/j+X+V+sY=,tag:Zu8ndwQNWjhD3B8iZkMfhw==,type:str]
+    OLLAMA_PORT: ENC[AES256_GCM,data:RUy+AY4=,iv:G+JW+IMrit5j+Ezu6Z/uEC+h43gynGIE83nKJtkLs4Y=,tag:S1G7/gOIk2DAit3JwRf8Kw==,type:str]
+    TIMEOUT: ENC[AES256_GCM,data:ha0=,iv:2w7IOn2ckn6foeVgtOIbrRzinf+jeU0yv1y7ziBs65M=,tag:ctxc5Yc3XGQyfg72Y8LUYg==,type:str]
     TOKEN: ENC[AES256_GCM,data:q5V3Pt6qV7ZCkhwjnwClxiqqJB8PikFxQ1CzIX5iA2E3AOwGl7e6/WJVZ5l/,iv:LC9HB5Ai+WTCEzM2C87QOFjAEuhoBXukL/lY1Tkye5c=,tag:xovvZhVveuXVKunr2yn9mg==,type:str]
     ADMIN_IDS: ENC[AES256_GCM,data:5QamakLLvRvo,iv:Yx1zbpKAyh0b5QVYp4vTqNa7sCYWGL72K5bod8bCTG4=,tag:FcC9QGHVPpJIB6DzOwHIKA==,type:str]
     USER_IDS: ENC[AES256_GCM,data:iWIM0MBKhGl0,iv:ckep+cxzBN7vV9yzaoX6/+4KQ79u/pwNSVQpJg3jWf4=,tag:ATqhXyof9aFepxMqRQCJMw==,type:str]
@@ -21,8 +24,8 @@ sops:
             YjY2N0p3TnZURmRLNEEwNURsVnRKYVEKQknJjY0GRL+5QONT6yHFPpbSwD0B3ivx
             i2xaNPT2ik0T2FJ+/BfzyTtOHYV3aOeCwOymS1SzZn9A/SwKoa4JgA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-07T22:37:53Z"
-    mac: ENC[AES256_GCM,data:ooDjTHQmP6s3pE+Tn851L/OSSTL7posIeBe1+l01i5SM4Qe1k+jsq54czqg4ufsLmBxl1eM8gtATWl4hYGOa962sqtuLWX9jHohPk8we2cnjsvr+Os0JWqHOKDPlGlDpJ/HCPulEOJ+CkiGUE846nhBXRl32nYEPLoBOhBRagB8=,iv:URzXOxAbr0T8zkd+/+YQg1HU0Hhicz0dhm3IH2fA06o=,tag:9W3M1h9lU7XRHdMMbPLENQ==,type:str]
+    lastmodified: "2024-06-07T22:41:56Z"
+    mac: ENC[AES256_GCM,data:V5HIvZTsXzjWeLroc7ppfIPGgkRevZlXqU4a8gxNaT6KyRTQY6+siH3schzc5ndRBq1stx/XsyvC7/sO7zjYb3Mk31SB3kuV0sfXQstL0fy5sKw4v56qFPNCisa4S6TEKSQ9n8DZiGKs47XG1pZ6uIDpoq5HpoHFVIQj5TgyKb8=,iv:xjCKA1mgOImJ9As7YOj06IPKA89LXBgCXod47foH1Gc=,tag:Dr9bvtjjtq/FFrkYfQJI2A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
