--- a/kubernetes/apps/ai/ollama/ks.yaml
+++ b/kubernetes/apps/ai/ollama/ks.yaml
@@ -38,25 +38,25 @@ spec:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: chat
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: &app ollama-addon-telegram
-  namespace: flux-system
-spec:
-  interval: 30m
-  retryInterval: 1m
-  timeout: 3m
-  targetNamespace: ai
-  path: "./kubernetes/apps/ai/ollama/addons"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: home-kubernetes
-  wait: true
-  dependsOn:
-    - name: ai-ollama
-  postBuild:
-    substitute:
-      APP: *app
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: &app ollama-addon-telegram
+#   namespace: flux-system
+# spec:
+#   interval: 30m
+#   retryInterval: 1m
+#   timeout: 3m
+#   targetNamespace: ai
+#   path: "./kubernetes/apps/ai/ollama/addons"
+#   prune: true
+#   sourceRef:
+#     kind: GitRepository
+#     name: home-kubernetes
+#   wait: true
+#   dependsOn:
+#     - name: ai-ollama
+#   postBuild:
+#     substitute:
+#       APP: *app
