--- a/kubernetes/apps/home/matter-server/app/helmrelease.yaml
+++ b/kubernetes/apps/home/matter-server/app/helmrelease.yaml
@@ -95,7 +95,7 @@ spec:
               - path: /
                 service:
                   identifier: app
-                  port: http
+                  port: api
         tls:
           - hosts:
               - *host
