--- a/kubernetes/apps/home/matter-server/app/helmrelease.yaml
+++ b/kubernetes/apps/home/matter-server/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
           app:
             image:
               repository: ghcr.io/home-assistant-libs/python-matter-server
-              tag: 6.0.1
+              tag: 6.1.1
               pullPolicy: IfNotPresent
             env:
               TZ: "${TIMEZONE}"
@@ -88,6 +88,20 @@ spec:
               - path: "/data"
     ingress:
       app:
+        annotations:
+          nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+          nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+          nginx.ingress.kubernetes.io/server-snippets: |
+          location / {
+            proxysetheader Upgrade $httpupgrade;
+            proxyhttpversion 1.1;
+            proxysetheader X-Forwarded-Host $httphost;
+            proxysetheader X-Forwarded-Proto $scheme;
+            proxysetheader X-Forwarded-For $remoteaddr;
+            proxysetheader Host $host;
+            proxysetheader Connection "upgrade";
+            proxycachebypass $httpupgrade;
+            }
         className: internal
         hosts:
           - host: *host
