--- a/kubernetes/apps/home/kustomization.yaml
+++ b/kubernetes/apps/home/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
   - ./mosquitto/ks.yaml
   - ./home-assistant/ks.yaml
   # - ./scrypted/ks.yaml
-  - ./matter-server/ks.yaml
+  # - ./matter-server/ks.yaml
