--- a/kubernetes/apps/home/matter-server/app/helmrelease.yaml
+++ b/kubernetes/apps/home/matter-server/app/helmrelease.yaml
@@ -65,6 +65,14 @@ spec:
                 memory: "100M"
               limits:
                 memory: "500M"
+            securityContext:
+              privileged: true
+              readOnlyRootFilesystem: true
+              capabilities:
+                add:
+                  - NET_ADMIN
+                  - NET_RAW
+                  - NET_BROADCAST
     service:
       app:
         controller: *app
