--- a/kubernetes/apps/network/multus/components/net-attach-iot.yaml
+++ b/kubernetes/apps/network/multus/components/net-attach-iot.yaml
@@ -12,7 +12,7 @@ spec:
       "plugins": [
         {
           "type": "macvlan",
-          "master": "eth1.100",
+          "master": "enp3s0",
           "mode": "bridge",
           "capabilities": {
             "ips": true
