--- a/kubernetes/apps/network/multus/app/helmrelease.yaml
+++ b/kubernetes/apps/network/multus/app/helmrelease.yaml
@@ -14,6 +14,10 @@ spec:
         name: angelnu
         namespace: flux-system
       interval: 30m
+      install:
+        remediation:
+          retries: 5
+        timeout: 15
   values:
     image:
       repository: ghcr.io/k8snetworkplumbingwg/multus-cni
