--- a/kubernetes/apps/network/multus/components/net-attach-iot.yaml
+++ b/kubernetes/apps/network/multus/components/net-attach-iot.yaml
@@ -23,6 +23,10 @@ spec:
               { "dst": "192.168.108.0/24", "gw": "192.168.108.1" }
             ]
           }
+        },
+        {
+          "capabilities": { "mac": true },
+          "type": "tuning"
         }
       ]
     }
