--- a/kubernetes/apps/network/multus/components/net-attach-iot.yaml
+++ b/kubernetes/apps/network/multus/components/net-attach-iot.yaml
@@ -30,3 +30,23 @@ spec:
         }
       ]
     }
+
+cat <<EOF | kubectl create -f -
+apiVersion: v1
+kind: Pod
+metadata:
+  name: samplepod
+  annotations:
+    k8s.v1.cni.cncf.io/networks: |
+              [{
+                "name":"multus-iot",
+                "namespace": "network",
+                "ips": ["192.168.108.111/24"]
+              }]
+spec:
+  containers:
+  - name: samplepod
+    command: ["/bin/ash", "-c", "trap : TERM INT; sleep infinity & wait"]
+    image: alpine
+  nodeSelector:
+    kubernetes.io/hostname: weilai
