--- a/kubernetes/apps/network/multus/app/helmrelease.yaml
+++ b/kubernetes/apps/network/multus/app/helmrelease.yaml
@@ -39,8 +39,8 @@ spec:
         tag: 1.5.0
 
       paths:
-        config: /var/lib/rancher/k3s/agent/etc/cni/net.d
-        bin: /var/lib/rancher/k3s/data/current/bin
+        config: /etc/cni/net.d
+        bin: /opt/cni/bin
 
     resources:
       requests:
