--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -6,6 +6,12 @@ kubernetes:
         "laik":
           ansible_user: "root"
           ansible_host: "192.168.108.149"
+        "sart":
+          ansible_user: "root"
+          ansible_host: "192.168.108.212"
+        "eri":
+          ansible_user: "root"
+          ansible_host: "192.168.108.238"
     workers:
       hosts:
         "tau":
