--- a/kubernetes/apps/home/matter-server/app/helmrelease.yaml
+++ b/kubernetes/apps/home/matter-server/app/helmrelease.yaml
@@ -25,17 +25,13 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    defaultPodOptions:
+      hostNetwork: true
     controllers:
       matter-server:
         type: statefulset
         annotations:
           reloader.stakater.com/auto: "true"
-          # k8s.v1.cni.cncf.io/networks: |
-          #   [{
-          #     "name":"multus-iot",
-          #     "namespace": "network",
-          #     "ips": ["192.168.108.111/24"]
-          #   }]
         pod:
           securityContext:
             runAsUser: 568
