--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -36,6 +36,31 @@ spec:
       operator:
         disable_prometheus_converter: false # Ensure we keep enabled the converter to sync prom rules to VM rules
         enable_converter_ownership: true # Required to allow VM to remove VM rules it imports if a prometheus rule is deleted
+      env:
+        - name: VM_VMSINGLEDEFAULT_CONFIGRELOADERCPU
+          value: 100m
+        - name: VM_VMSINGLEDEFAULT_CONFIGRELOADERMEMORY
+          value: 100Mi
+        - name: VM_VMALERTDEFAULT_CONFIGRELOADERCPU
+          value: 100m
+        - name: VM_VMALERTDEFAULT_CONFIGRELOADERMEMORY
+          value: 100Mi
+        - name: VM_VMAGENTDEFAULT_CONFIGRELOADERCPU
+          value: 100m
+        - name: VM_VMAGENTDEFAULT_CONFIGRELOADERMEMORY
+          value: 100Mi
+        - name: VM_VMALERTMANAGER_CONFIGRELOADERCPU
+          value: 100m
+        - name: VM_VMALERTMANAGER_CONFIGRELOADERMEMORY
+          value: 100Mi
+      resources:
+        requests:
+          cpu: 20m
+          memory: 100Mi
+          ephemeral-storage: 1Gi
+        limits:
+          memory: 100Mi
+          ephemeral-storage: 2Gi
     serviceAccount:
       # -- Specifies whether a service account should be created
       create: true
@@ -50,7 +75,7 @@ spec:
         replicationFactor: 3
         # Storage backend
         vmstorage:
-          replicaCount: 1 # HA - but prefer 3 as i have 3 notes & using local-hostpath
+          replicaCount: 3 # HA - but prefer 3 as i have 3 notes & using longhorn-storage
           # required for HA vmagents
           extraArgs:
             dedup.minScrapeInterval: 60s # Only needed for HA
@@ -64,19 +89,13 @@ spec:
                     storage: 20Gi
         # Query backend
         vmselect:
-          replicaCount: 1 # HA
+          replicaCount: 2 # HA
           cacheMountPath: /select-cache
           extraArgs:
             dedup.minScrapeInterval: "60s" # should be equal to VMAgent's scrapeInterval (default 30s)
             search.minStalenessInterval: "5m"
             search.maxConcurrentRequests: "6"
             vmalert.proxyURL: "http://vmalert.${SECRET_DOMAIN}"
-          resources:
-            requests:
-              cpu: 205m
-              memory: 500Mi
-            limits:
-              memory: 2Gi
           storage:
             volumeClaimTemplate:
               spec:
@@ -86,13 +105,13 @@ spec:
                     storage: 2Gi
         # Data ingestion backend
         vminsert:
-          replicaCount: 1 # HA
+          replicaCount: 2 # HA
           extraArgs:
             maxLabelsPerTimeseries: "90" # More needed if you are scraping a LOT of stuff and having issues
             # insert.maxConcurrentRequests: 10
           resources:
             requests:
-              cpu: 105m
+              cpu: 10m
               memory: 300Mi
             limits:
               memory: 600Mi
@@ -127,15 +146,12 @@ spec:
     vmalert:
       enabled: true
       spec:
-        replicaCount: 1 # HA
+        replicaCount: 2 # HA
         evaluationInterval: "60s"
         notifiers:
           - selector:
               namespaceSelector:
-                matchNames:
-                  - observability
-                  - kube-system
-                  - storage
+                matchNames: ["observability"]
               labelSelector:
                 matchLabels:
                   app.kubernetes.io/name: victoria-metrics-k8s-stack
@@ -153,7 +169,7 @@ spec:
       enabled: true
       spec:
         replicaCount: 1
-        shardCount: 1
+        shardCount: 2
         scrapeInterval: "60s"
         additionalScrapeConfigs:
           name: vm-additional-scrape-configs
@@ -167,7 +183,7 @@ spec:
           cluster: ark
         resources:
           requests:
-            cpu: 205m
+            cpu: 20m
             memory: 500Mi
           limits:
             memory: 2Gi
@@ -205,31 +221,30 @@ spec:
       rules:
         etcd: true
         general: true
-        k8s: false
-        kubeApiserver: false
-        kubeApiserverAvailability: false
-        kubeApiserverBurnrate: false
-        kubeApiserverHistogram: false
-        kubeApiserverSlos: false
-        kubelet: false
+        k8s: true
+        kubeApiserver: true
+        kubeApiserverAvailability: true
+        kubeApiserverBurnrate: true
+        kubeApiserverHistogram: true
+        kubeApiserverSlos: true
+        kubelet: true
         kubePrometheusGeneral: true
         kubePrometheusNodeRecording: true
-        kubernetesApps: false
-        kubernetesResources: false
-        kubernetesStorage: false
-        kubernetesSystem: false
-        kubeScheduler: false
+        kubernetesApps: true
+        kubernetesResources: true
+        kubernetesStorage: true
+        kubernetesSystem: true
+        kubeScheduler: true
         kubeStateMetrics: true
         network: true
         node: true
-        vmagent: false
-        vmsingle: false
-        vmcluster: false
-        vmhealth: false
+        vmagent: true
+        vmsingle: true
+        vmhealth: true
         alertmanager: true
 
       # -- Runbook url prefix for default rules
-      runbookUrl: https://runbooks.skynerv.com
+      runbookUrl: https://runbooks.${SECRET_DOMAIN}
 
       ## Reduce app namespace alert scope
       appNamespacesTarget: ".*"
@@ -297,20 +312,27 @@ spec:
         # wheter we should create a service scrape resource for node-exporter
         enabled: true
 
-        # spec for VMServiceScrape crd
-        # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
-        spec:
-          jobLabel: app.kubernetes.io/instance
-          endpoints:
-            - port: metrics
-              metricRelabelConfigs:
-                - action: drop
-                  source_labels: [mountpoint]
-                  regex: "/var/lib/kubelet/pods.+"
-
     # kube-state-metrics dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
     kube-state-metrics:
       enabled: true
+      vmServiceScrape:
+        spec:
+          endpoints:
+          - port: http
+            honorLabels: true
+            metricRelabelConfigs:
+              - action: labeldrop
+                regex: (container_id|image_id)
+      metricLabelsAllowlist:
+        - pods=[*]
+      resources:
+        requests:
+          cpu: 10m
+          memory: 100Mi
+          ephemeral-storage: 1Gi
+        limits:
+          memory: 100Mi
+          ephemeral-storage: 2Gi
       prometheus:
         monitor:
           enabled: true
@@ -319,85 +341,45 @@ spec:
     # Add Kubelet scrape
     kubelet:
       enabled: true
-      # -- Enable scraping /metrics/cadvisor from kubelet's service
-      cadvisor: true
-      # -- Enable scraping /metrics/probes from kubelet's service
-      probes: true
-      # spec for VMNodeScrape crd
-      # https://docs.victoriametrics.com/operator/api.html#vmnodescrapespec
       spec:
-        scheme: "https"
-        honorLabels: true
-        interval: "30s"
-        scrapeTimeout: "5s"
-        tlsConfig:
-          insecureSkipVerify: true
-          caFile: "/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
-        bearerTokenFile: "/var/run/secrets/kubernetes.io/serviceaccount/token"
-        # drop high cardinality label and useless metrics for cadvisor and kubelet
         metricRelabelConfigs:
+          # Drop high cardinality labels
           - action: labeldrop
             regex: (uid)
           - action: labeldrop
             regex: (id|name)
           - action: drop
-            source_labels: [__name__]
+            source_labels: ["__name__"]
             regex: (rest_client_request_duration_seconds_bucket|rest_client_request_duration_seconds_sum|rest_client_request_duration_seconds_count)
-        relabelConfigs:
-          - action: labelmap
-            regex: __meta_kubernetes_node_label_(.+)
-          - sourceLabels: [__metrics_path__]
-            targetLabel: metrics_path
-          - targetLabel: "job"
-            replacement: "kubelet"
-        # ignore timestamps of cadvisor's metrics by default
-        # more info here https://github.com/VictoriaMetrics/VictoriaMetrics/issues/4697#issuecomment-1656540535
-        honorTimestamps: false
 
     # Add Kubeapi scrape
     kubeApiServer:
       enabled: true
-      # spec for VMServiceScrape crd
-      # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
       spec:
-        endpoints:
-          - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-            # bearerTokenSecret:
-            #   key: ""
-            port: https
-            scheme: https
-            tlsConfig:
-              caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-              serverName: kubernetes
-        jobLabel: component
-        namespaceSelector:
-          matchNames:
-            - kube-system
-        selector:
-          matchLabels:
-            component: apiserver
-            provider: kubernetes
+        metricRelabelConfigs:
+          # Drop high cardinality labels
+          - sourceLabels: ["__name__"]
+            regex: (apiserver|etcd|rest_client)_request(|_sli|_slo)_duration_seconds_bucket
+            action: drop
+          - sourceLabels: ["__name__"]
+            regex: (apiserver_response_sizes_bucket|apiserver_watch_events_sizes_bucket)
+            action: drop
 
     # Add kubeControllerManager scrape
     kubeControllerManager:
       enabled: true
       endpoints: &cp
         - 192.168.108.149
+        - 192.168.108.238
+        - 192.168.108.209
       service:
         enabled: true
         port: 10259
         targetPort: 10259
       spec:
-        jobLabel: component
         endpoints:
-          - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-            # bearerTokenSecret:
-            #   key: ""
-            port: http-metrics
-            scheme: https
-            tlsConfig:
-              caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-              serverName: kubernetes
+          - port: http-metrics
+            scheme: http
 
     # -Component scraping kubeDns. Use either this or coreDns
     kubeDns:
@@ -405,6 +387,8 @@ spec:
 
     # -- Component scraping coreDns. Use either this or kubeDns
     coreDns:
+      spec:
+        jobLabel: "jobLabel"
       enabled: true
       service:
         enabled: true
@@ -414,25 +398,10 @@ spec:
           k8s-app: kube-dns
       # spec for VMServiceScrape crd
       # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
-      spec:
-        jobLabel: component
-        endpoints:
-          - port: http-metrics
-            bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
 
     # Add kubeScheduler scrape
     kubeScheduler:
       enabled: false
-      endpoints: *cp
-      service:
-        enabled: true
-        port: 10259
-        targetPort: 10259
-
-      spec:
-        endpoints:
-          - port: http-metrics
-            insecureSkipVerify: true
 
     # Add kubeEtcd scrape
     kubeEtcd:
@@ -447,9 +416,6 @@ spec:
           - port: http-metrics
             scheme: http
 
-    # Enable deployment of grafana
-    # I chose to deploy this seperately and manage it myself
-    #   insetad of trusting the stack chart
     grafana:
       enabled: false
 
