--- a/kubernetes/apps/observability/victoria-metrics/app/alertmanagerconfig.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/alertmanagerconfig.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: alertmanager-secret
-  namespace: monitoring
+  namespace: observability
 type: Opaque
 stringData:
   alertmanager.yaml: |
@@ -11,9 +11,9 @@ stringData:
       resolve_timeout: 5m
     route:
       group_by: ["alertname", "job"]
-      group_wait: 1m
-      group_interval: 10m
-      repeat_interval: 24h
+      group_wait: 30s
+      group_interval: 5m
+      repeat_interval: 6h
       receiver: "pushover"
       routes:
         - receiver: "null"
@@ -21,7 +21,7 @@ stringData:
             - alertname =~ "InfoInhibitor|Watchdog"
         - receiver: "pushover"
           matchers:
-            - severity = "critical"
+            - severity = critical
           continue: true
     inhibit_rules:
       - source_matchers:
@@ -33,30 +33,35 @@ stringData:
       - name: "null"
       - name: "pushover"
         pushover_configs:
-          - user_key: ${PUSHOVER_USER_KEY}
-            token: ${SECRET_ALERTMANAGER_PUSHOVER_TOKEN}
+          - html: true
+            token_file: /etc/secrets/pushover_api_token
+            user_key_file: /etc/secrets/pushover_api_userkey
             send_resolved: true
-            html: true
             priority: |-
               {{ if eq .Status "firing" }}1{{ else }}0{{ end }}
+            url_title: View in Alert Manager
             title: |-
-              {{ .CommonLabels.alertname }} [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}]
+              [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ .CommonLabels.alertname }}
             message: |-
               {{- range .Alerts }}
-                {{- if ne .Annotations.description "" }}
-                  {{ .Annotations.description }}
-                {{- else if ne .Annotations.summary "" }}
-                  {{ .Annotations.summary }}
-                {{- else if ne .Annotations.message "" }}
-                  {{ .Annotations.message }}
+                {{- if ne .Labels.severity "" }}
+                  <b>Severity:</b> <i>{{ .Labels.severity }}</i>
                 {{- else }}
-                  Alert description not available
+                  <b>Severity:</b> <i>N/A</i>
+                {{- end }}
+                {{- if ne .Annotations.description "" }}
+                  <b>Description:</b> <i>{{ .Annotations.description }}</i>
+                {{- else if ne .Annotations.summary "" }}
+                  <b>Summary:</b> <i>{{ .Annotations.summary }}</i>
+                {{- else if ne .Annotations.message "" }}
+                  <b>Message:</b> <i>{{ .Annotations.message }}</i>
+                {{- else }}
+                  <b>Description:</b> <i>N/A</i>
                 {{- end }}
                 {{- if gt (len .Labels.SortedPairs) 0 }}
-                  <small>
+                  <b>Details:</b>
                   {{- range .Labels.SortedPairs }}
-                    <b>{{ .Name }}:</b> {{ .Value }}
+                    • <b>{{ .Name }}:</b> <i>{{ .Value }}</i>
                   {{- end }}
-                  </small>
                 {{- end }}
               {{- end }}
