--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -65,21 +65,35 @@ spec:
       # -- Specifies whether a service account should be created
       create: true
     # Main VM Cluster in HA mode.
+     # Main VM Cluster in HA mode.
     vmcluster:
       enabled: true
       spec:
         # Duration to keep metrics
         retentionPeriod: "2" # this is months unless a character prefix is added (1d, 1w, etc)
         extraArgs:
-          dedup.minScrapeInterval: "60s" # Only needed for HA
+          dedup.minScrapeInterval: 30s
         replicationFactor: 3
         # Storage backend
         vmstorage:
-          replicaCount: 3 # HA - but prefer 3 as i have 3 notes & using longhorn-storage
+          replicaCount: 3
           # required for HA vmagents
+          resources:
+            requests:
+              cpu: 100m
+              memory: 512Mi
+            limits:
+              cpu: 500m
+              memory: 1536Mi
+          topologySpreadConstraints:
+            - maxSkew: 1
+              topologyKey: kubernetes.io/hostname
+              whenUnsatisfiable: DoNotSchedule
+              labelSelector:
+                matchLabels:
+                  app.kubernetes.io/name: vmstorage
           extraArgs:
-            dedup.minScrapeInterval: 60s # Only needed for HA
-            search.maxConcurrentRequests: "6"
+            dedup.minScrapeInterval: 30s
           storage:
             volumeClaimTemplate:
               spec:
@@ -90,12 +104,25 @@ spec:
         # Query backend
         vmselect:
           replicaCount: 2 # HA
+          resources:
+            requests:
+              cpu: 100m
+              memory: 256Mi
+            limits:
+              cpu: 750m
+              memory: 256Mi
+          topologySpreadConstraints:
+            - maxSkew: 1
+              topologyKey: kubernetes.io/hostname
+              whenUnsatisfiable: DoNotSchedule
+              labelSelector:
+                matchLabels:
+                  app.kubernetes.io/name: vmselect
           cacheMountPath: /select-cache
           extraArgs:
-            dedup.minScrapeInterval: "60s" # should be equal to VMAgent's scrapeInterval (default 30s)
-            search.minStalenessInterval: "5m"
-            search.maxConcurrentRequests: "6"
-            vmalert.proxyURL: "http://vmalert.${SECRET_DOMAIN}"
+            dedup.minScrapeInterval: 30s
+            search.minStalenessInterval: 5m
+            vmalert.proxyURL: http://vmalert-victoria-metrics:8080
           storage:
             volumeClaimTemplate:
               spec:
@@ -106,55 +133,45 @@ spec:
         # Data ingestion backend
         vminsert:
           replicaCount: 2 # HA
-          extraArgs:
-            maxLabelsPerTimeseries: "90" # More needed if you are scraping a LOT of stuff and having issues
-            # insert.maxConcurrentRequests: 10
           resources:
             requests:
-              cpu: 10m
-              memory: 300Mi
+              cpu: 100m
+              memory: 256Mi
             limits:
-              memory: 600Mi
-      ingress:
-        storage:
-          enabled: true
-          ingressClassName: internal
-          hosts:
-            - &hoststorage vmstorage.${SECRET_DOMAIN}
-          tls:
-            - hosts:
-                - *hoststorage
-
-        select:
-          enabled: true
-          ingressClassName: internal
-          hosts:
-            - &hostselect vmselect.${SECRET_DOMAIN}
-          tls:
-            - hosts:
-                - *hostselect
-
-        insert:
-          enabled: true
-          ingressClassName: internal
-          hosts:
-            - &hostinsert vminsert.${SECRET_DOMAIN}
-          tls:
-            - hosts:
-                - *hostinsert
-    # VM Alerting (however, this just watches & passes alerts to prom-alertmanager below...)
+              cpu: 500m
+              memory: 256Mi
+          topologySpreadConstraints:
+            - maxSkew: 1
+              topologyKey: kubernetes.io/hostname
+              whenUnsatisfiable: DoNotSchedule
+              labelSelector:
+                matchLabels:
+                  app.kubernetes.io/name: vminsert
+          extraArgs:
+            maxLabelsPerTimeseries: "90" # More needed if you are scraping a LOT of stuff and having issues
+      # VM Alerting (however, this just watches & passes alerts to alertmanager)
     vmalert:
       enabled: true
       spec:
-        replicaCount: 2 # HA
-        evaluationInterval: "60s"
+        replicaCount: 2
+        resources:
+          requests:
+            cpu: 50m
+            memory: 128Mi
+          limits:
+            cpu: 150m
+            memory: 256Mi
+        topologySpreadConstraints:
+          - maxSkew: 1
+            topologyKey: kubernetes.io/hostname
+            whenUnsatisfiable: DoNotSchedule
+            labelSelector:
+              matchLabels:
+                app.kubernetes.io/name: vmalert
+        extraArgs:
+          external.url: https://vmalert.${SECRET_DOMAIN}
         notifiers:
-          - selector:
-              namespaceSelector:
-                matchNames: ["observability"]
-              labelSelector:
-                matchLabels:
-                  app.kubernetes.io/name: victoria-metrics-k8s-stack
+          - url: http://alertmanager.observability.svc.cluster.local:9093
       ingress:
         enabled: true
         ingressClassName: internal
@@ -164,29 +181,32 @@ spec:
           - hosts:
               - *hostalert
 
-    # VM Data scraping
+     # VM Data scraping
     vmagent:
       enabled: true
       spec:
         replicaCount: 1
         shardCount: 2
-        scrapeInterval: "60s"
+        scrapeInterval: 30s
+        externalLabels:
+          cluster: main
+        resources:
+          requests:
+            cpu: 50m
+            memory: 256Mi
+          limits:
+            cpu: 400m
+            memory: 512Mi
+        topologySpreadConstraints:
+          - maxSkew: 1
+            topologyKey: kubernetes.io/hostname
+            whenUnsatisfiable: DoNotSchedule
+            labelSelector:
+              matchLabels:
+                app.kubernetes.io/name: vmagent
         additionalScrapeConfigs:
           name: vm-additional-scrape-configs
           key: prometheus-additional.yaml
-        extraArgs:
-          promscrape.streamParse: "true"
-          # Do not store original labels in vmagent's memory by default. This reduces the amount of memory used by vmagent
-          # but makes vmagent debugging UI less informative. See: https://docs.victoriametrics.com/vmagent/#relabel-debug
-          promscrape.dropOriginalLabels: "false"
-        externalLabels:
-          cluster: ark
-        resources:
-          requests:
-            cpu: 20m
-            memory: 500Mi
-          limits:
-            memory: 2Gi
       ingress:
         enabled: true
         ingressClassName: internal
@@ -204,6 +224,7 @@ spec:
         tls:
           - hosts:
               - *hostagent
+
     # Single-binary vm cluster alternative (liteweight, non-HA)
     vmsingle:
       enabled: false
@@ -312,45 +333,42 @@ spec:
         # wheter we should create a service scrape resource for node-exporter
         enabled: true
 
-    # kube-state-metrics dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
-    kube-state-metrics:
-      enabled: true
-      vmServiceScrape:
-        spec:
-          endpoints:
-          - port: http
-            honorLabels: true
-            metricRelabelConfigs:
-              - action: labeldrop
-                regex: (container_id|image_id)
-      metricLabelsAllowlist:
-        - pods=[*]
-      resources:
-        requests:
-          cpu: 10m
-          memory: 100Mi
-          ephemeral-storage: 1Gi
-        limits:
-          memory: 100Mi
-          ephemeral-storage: 2Gi
-      prometheus:
-        monitor:
-          enabled: true
 
-
-    # Add Kubelet scrape
+    # Scrape configs
     kubelet:
       enabled: true
       spec:
+        interval: 30s
+        # drop high cardinality label and useless metrics for cadvisor and kubelet
         metricRelabelConfigs:
-          # Drop high cardinality labels
           - action: labeldrop
-            regex: (uid)
+            regex: (uid|pod_uid|id)
           - action: labeldrop
-            regex: (id|name)
+            regex: (name)
           - action: drop
-            source_labels: ["__name__"]
+            source_labels: [__name__]
             regex: (rest_client_request_duration_seconds_bucket|rest_client_request_duration_seconds_sum|rest_client_request_duration_seconds_count)
+          - action: drop
+            source_labels: [__name__]
+            regex: (container_tasks_state|container_memory_failures_total)
+          - action: drop
+            source_labels: [__name__]
+            regex: (container_blkio_device_usage_total)
+          - action: drop
+            source_labels: [__name__]
+            regex: (prober_probe_duration_seconds_bucket)
+        relabelConfigs:
+          - action: labelmap
+            regex: __meta_kubernetes_node_label_(.+)
+          - sourceLabels: [__metrics_path__]
+            targetLabel: metrics_path
+          - targetLabel: "job"
+            replacement: "kubelet"
+
+
+    # kube-state-metrics dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
+    kube-state-metrics:
+      enabled: false
 
     # Add Kubeapi scrape
     kubeApiServer:
