--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -110,7 +110,7 @@ spec:
               memory: 256Mi
             limits:
               cpu: 750m
-              memory: 256Mi
+              memory: 2Gi
           topologySpreadConstraints:
             - maxSkew: 1
               topologyKey: kubernetes.io/hostname
