--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -320,6 +320,13 @@ spec:
     # prometheus-node-exporter dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/prometheus-node-exporter/values.yaml
     prometheus-node-exporter:
       enabled: true
+      prometheus:
+        monitor:
+          relabelings:
+            - action: replace
+              targetLabel: "instance"
+              sourceLabels:
+                - "__meta_kubernetes_pod_node_name"
 
       ## all values for prometheus-node-exporter helm chart can be specified here
       podLabels:
@@ -351,6 +358,32 @@ spec:
       enabled: true
       spec:
         interval: 30s
+        serviceMonitor:
+          cAdvisorRelabelings:
+            - action: replace
+              sourceLabels: [__metrics_path__]
+              targetLabel: metrics_path
+            - action: replace
+              targetLabel: instance
+              sourceLabels:
+                - "node"
+          relabelings:
+            - action: replace
+              sourceLabels: [__metrics_path__]
+              targetLabel: metrics_path
+          metricRelabelings:
+            - action: drop
+              regex: (apiserver_request_duration_seconds_bucket|apiserver_request_body_size_bytes_bucket|apiserver_response_sizes_bucket|apiserver_watch_events_sizes_bucket|apiserver_request_sli_duration_seconds_bucket)
+              sourceLabels: [__name__]
+            - action: drop
+              regex: "etcd_request_duration_seconds_bucket"
+              sourceLabels: [__name__]
+            - action: drop
+              regex: (scheduler_plugin_execution_duration_seconds_bucket)
+              sourceLabels: [__name__]
+            - action: drop
+              regex: (workqueue_work_duration_seconds_bucket)
+              sourceLabels: [__name__]
         # drop high cardinality label and useless metrics for cadvisor and kubelet
         metricRelabelConfigs:
           - action: labeldrop
@@ -380,37 +413,32 @@ spec:
 
     # kube-state-metrics dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
     kube-state-metrics:
-      enabled: false
+      enabled: true
+      prometheus:
+        monitor:
+          relabelings:
+            - action: replace
+              targetLabel: "instance"
+              sourceLabels:
+                - "__meta_kubernetes_pod_node_name"
 
     # Add Kubeapi scrape
     kubeApiServer:
       enabled: true
-      spec:
-        metricRelabelConfigs:
-          # Drop high cardinality labels
-          - sourceLabels: ["__name__"]
-            regex: (apiserver|etcd|rest_client)_request(|_sli|_slo)_duration_seconds_bucket
-            action: drop
-          - sourceLabels: ["__name__"]
-            regex: (apiserver_response_sizes_bucket|apiserver_watch_events_sizes_bucket)
-            action: drop
-        endpoints:
-          - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-            # bearerTokenSecret:
-            #   key: ""
-            port: https
-            scheme: https
-            tlsConfig:
-              caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-              serverName: kubernetes
-        jobLabel: component
-        namespaceSelector:
-          matchNames:
-            - kube-system
-        selector:
-          matchLabels:
-            component: apiserver
-            provider: kubernetes
+      serviceMonitor:
+        metricRelabelings:
+          - action: drop
+            regex: (apiserver_request_duration_seconds_bucket|apiserver_request_body_size_bytes_bucket|apiserver_response_sizes_bucket|apiserver_watch_events_sizes_bucket|apiserver_request_sli_duration_seconds_bucket)
+            sourceLabels: [__name__]
+          - action: drop
+            regex: "etcd_request_duration_seconds_bucket"
+            sourceLabels: [__name__]
+          - action: drop
+            regex: (scheduler_plugin_execution_duration_seconds_bucket)
+            sourceLabels: [__name__]
+          - action: drop
+            regex: (workqueue_work_duration_seconds_bucket)
+            sourceLabels: [__name__]
 
     # Add kubeControllerManager scrape
     kubeControllerManager:
@@ -421,12 +449,25 @@ spec:
         - 192.168.108.209
       service:
         enabled: true
-        port: 10259
-        targetPort: 10259
-      spec:
-        endpoints:
-          - port: http-metrics
-            scheme: http
+        port: 10257
+        targetPort: 10257
+      serviceMonitor:
+        enabled: true
+        https: true
+        insecureSkipVerify: true
+        metricRelabelings:
+          - action: drop
+            regex: (apiserver_request_duration_seconds_bucket|apiserver_request_body_size_bytes_bucket|apiserver_response_sizes_bucket|apiserver_watch_events_sizes_bucket|apiserver_request_sli_duration_seconds_bucket)
+            sourceLabels: [__name__]
+          - action: drop
+            regex: "etcd_request_duration_seconds_bucket"
+            sourceLabels: [__name__]
+          - action: drop
+            regex: (scheduler_plugin_execution_duration_seconds_bucket)
+            sourceLabels: [__name__]
+          - action: drop
+            regex: (workqueue_work_duration_seconds_bucket)
+            sourceLabels: [__name__]
 
     # -Component scraping kubeDns. Use either this or coreDns
     kubeDns:
@@ -443,22 +484,46 @@ spec:
         targetPort: 9153
         selector:
           k8s-app: kube-dns
-      # spec for VMServiceScrape crd
-      # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
+      serviceMonitor:
+        metricRelabelings:
+          - action: drop
+            regex: (apiserver_request_duration_seconds_bucket|apiserver_request_body_size_bytes_bucket|apiserver_response_sizes_bucket|apiserver_watch_events_sizes_bucket|apiserver_request_sli_duration_seconds_bucket)
+            sourceLabels: [__name__]
+          - action: drop
+            regex: "etcd_request_duration_seconds_bucket"
+            sourceLabels: [__name__]
+          - action: drop
+            regex: (scheduler_plugin_execution_duration_seconds_bucket)
+            sourceLabels: [__name__]
+          - action: drop
+            regex: (workqueue_work_duration_seconds_bucket)
+            sourceLabels: [__name__]
 
     # Add kubeScheduler scrape
     kubeScheduler:
-      enabled: false
+      enabled: true
       endpoints: *cp
       service:
         enabled: true
         port: 10259
         targetPort: 10259
-
-      spec:
-        endpoints:
-          - port: http-metrics
-            insecureSkipVerify: true
+      serviceMonitor:
+        enabled: true
+        https: true
+        insecureSkipVerify: true
+        metricRelabelings:
+          - action: drop
+            regex: (apiserver_request_duration_seconds_bucket|apiserver_request_body_size_bytes_bucket|apiserver_response_sizes_bucket|apiserver_watch_events_sizes_bucket|apiserver_request_sli_duration_seconds_bucket)
+            sourceLabels: [__name__]
+          - action: drop
+            regex: "etcd_request_duration_seconds_bucket"
+            sourceLabels: [__name__]
+          - action: drop
+            regex: (scheduler_plugin_execution_duration_seconds_bucket)
+            sourceLabels: [__name__]
+          - action: drop
+            regex: (workqueue_work_duration_seconds_bucket)
+            sourceLabels: [__name__]
 
     # Add kubeEtcd scrape
     kubeEtcd:
@@ -468,10 +533,20 @@ spec:
         enabled: true
         port: 2381
         targetPort: 2381
-      spec:
-        endpoints:
-          - port: http-metrics
-            scheme: http
+      serviceMonitor:
+        metricRelabelings:
+          - action: drop
+            regex: (apiserver_request_duration_seconds_bucket|apiserver_request_body_size_bytes_bucket|apiserver_response_sizes_bucket|apiserver_watch_events_sizes_bucket|apiserver_request_sli_duration_seconds_bucket)
+            sourceLabels: [__name__]
+          - action: drop
+            regex: "etcd_request_duration_seconds_bucket"
+            sourceLabels: [__name__]
+          - action: drop
+            regex: (scheduler_plugin_execution_duration_seconds_bucket)
+            sourceLabels: [__name__]
+          - action: drop
+            regex: (workqueue_work_duration_seconds_bucket)
+            sourceLabels: [__name__]
 
     grafana:
       enabled: false
