--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -20,6 +20,7 @@ stringData:
     MINIO_ROOT_USER: ENC[AES256_GCM,data:yw6AjW0EXtjd,iv:31lrASRIL7FPYfI6aEX/78UdptK4jxrDBM1NxCgzKck=,tag:2ase/ip6sTOo4qT9ZnRCyw==,type:str]
     MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:7Q/BxHHBRliqSg==,iv:AlMR/cmRHlxsAWwPTbfDj0rB6TO8lXlhCAKMvhHf3CM=,tag:xRXY2L1eIluZV/Q2BypgmA==,type:str]
     PUSHOVER_USER_KEY: ENC[AES256_GCM,data:/GKNQ296d8YqjU7VVAY1RrRVcq5ZBsT+JkIt/mX3,iv:jpl/0670Ib+9XJx0fjOIqZFL91CKXeg8/JTajEZNht0=,tag:h5sms0Jw2WBA2BRhd4z50Q==,type:str]
+    ALERTMANAGER_API_TOKEN: ENC[AES256_GCM,data:ZLbnfqGy85ZsCxWpaCtpcXQydPxd20VPF3wqUqBC,iv:9T1JUDGOPfpXnC6J0PrhGihzAp7QGcLeGL+d9+i2bgE=,tag:N2Br4e9r6SwRp8UDV3gxag==,type:str]
     GATUS_PUSHOVER_TOKEN: ENC[AES256_GCM,data:fS6KBB3j5IZcbj+nnZneXXGMWfRRbtagzjWO6IYV,iv:T1XLyYdU32tM8G+OUGgJB3kL2REWcjvAMjgvk/2suq4=,tag:2GVVKpo4u1j9sSO2GRCy1Q==,type:str]
     SONARR_PUSHOVER_TOKEN: ENC[AES256_GCM,data:3nHu4JSgF3CgHXCoWjp2RVtUk7T1GdJCrMphfqBp,iv:a3zEUwZwHx3utVEEp/MPEy4EBE+UEchijmSu/Yw3Inc=,tag:/Y5R92NtNWbtsHC3gKmvpw==,type:str]
     SECRET_ALERTMANAGER_PUSHOVER_TOKEN: ENC[AES256_GCM,data:qvn1THhv0fP+35RDizRXRmRlqHtteEyGyOwcVXZn,iv:bwHAmFv8KpWxpxKuodxTTEq9xQSzcbs6f2UBCLsH168=,tag:Q/OxjACCnUwnSMOmcP32qg==,type:str]
@@ -53,8 +54,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-10T21:41:41Z"
-    mac: ENC[AES256_GCM,data:2rIPZhXd+KqG3jqfIPqE+G+LTv2sOv1bxlgnWcKmtgDKUDcwx9JyL7kZ8PfsTTWu05vowknna1S4IlgFr3jJLghOuFU60LW9zTb0N4eTfzGoE+2XUbaxKybaPiTqBH0gfQUV+SqN3bfnCBKMsY7zZrzo/A+NbytlvQ2HFGw+u1U=,iv:HiHroTn0E4E8YZGOMZVZ9jeFUdA2N9JQYqwfGQvLRm0=,tag:x5SN99ENStaJMXjtel+AXQ==,type:str]
+    lastmodified: "2024-06-14T22:20:35Z"
+    mac: ENC[AES256_GCM,data:YXj+wJYRKXsnREWav884WFjcYJEzD8hWlCm90aYyXRcudEjzGIjkyqQDCgsWLgG8Rzhr4Yd9qSxkBXukr1JsTA061hMwPmVP4lWb+6JwVYpnOmkA9yoE1dsNss8xg0bFCG6Jw0Jg6tpBSpXcUnKY85mYKOq+nlAe0RJeHZqlGd8=,iv:T2TtHaEGEo4qr+OtvyGZbLHtCpIxYdiPr4e8zLYl9Sk=,tag:4G4UzcalzqZmIRoqoQzX4Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
