--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -179,7 +179,7 @@ spec:
         enabled: true
         ingressClassName: internal
         hosts:
-          - vmalert.${SECRET_DOMAIN}
+          - &hostalert vmalert.${SECRET_DOMAIN}
         tls:
           - hosts:
               - *hostalert
