--- a/kubernetes/apps/media/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/prowlarr/app/helmrelease.yaml
@@ -96,9 +96,8 @@ spec:
           - hosts:
               - *host
 
-    persistence:
+     persistence:
       config:
-        enabled: true
-        type: emptyDir
+        existingClaim: prowlarr-config
       tmp:
         type: emptyDir
