--- a/kubernetes/apps/media/prowlarr/app/kustomization.yaml
+++ b/kubernetes/apps/media/prowlarr/app/kustomization.yaml
@@ -5,4 +5,5 @@ kind: Kustomization
 resources:
   - ./secret.sops.yaml
   - ./helmrelease.yaml
+  - ./pvc.yaml
   - ../../../../templates/gatus/guarded
